Add cleaned datasets and complete Phase 1 data cleaning

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "49a42907-6310-4b4a-8d5a-80d11ff2382a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "4337e1bd-40e7-4d2c-aa2c-6288b47d25a2",
    "metadata": {},
    "outputs": [
@@ -1082,25 +1082,133 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d47e5761-1bba-4db8-8a23-3a9508260920",
+   "metadata": {},
+   "source": [
+    "## 8. Normalize Key Categorical Columns\n",
+    "\n",
+    "Some string columns contain mixed casing or inconsisten labels.\n",
+    "Normazlie all relevant categorical fields to lowercase consistency.\n",
+    "\n",
+    "Columns to standardize \n",
+    "- events.event_type\n",
+    "- orders.payment_method\n",
+    "- orders.device\n",
+    "- orders.source\n",
+    "- customers.country\n",
+    "- orders.country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "df138fdd-89bc-43cd-8763-062771f4c11c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['page_view', 'add_to_cart', 'checkout', 'purchase'], dtype=object),\n",
+       " array(['card', 'paypal', 'wallet', 'cod'], dtype=object),\n",
+       " array(['desktop', 'tablet', 'mobile'], dtype=object),\n",
+       " array(['organic', 'email', 'paid', 'direct', 'social', 'referral'],\n",
+       "       dtype=object),\n",
+       " array(['JP', 'IN', 'BR', 'FR', 'US', 'GB', 'MX', 'AU', 'SG', 'AE'],\n",
+       "       dtype=object))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Normalize categorical fields for consistent grouping\n",
+    "\n",
+    "events[\"event_type\"] = events[\"event_type\"].str.lower()\n",
+    "orders[\"payment_method\"] = orders[\"payment_method\"].str.lower()\n",
+    "orders[\"device\"] = orders[\"device\"].str.lower()\n",
+    "orders[\"source\"] = orders[\"source\"].str.lower()\n",
+    "\n",
+    "# Country codes → uppercase (ISO-like)\n",
+    "customers[\"country\"] = customers[\"country\"].str.upper()\n",
+    "orders[\"country\"] = orders[\"country\"].str.upper()\n",
+    "\n",
+    "# Quick checks\n",
+    "(\n",
+    "    events.event_type.unique()[:10],\n",
+    "    orders.payment_method.unique()[:10],\n",
+    "    orders.device.unique()[:10],\n",
+    "    orders.source.unique()[:10],\n",
+    "    customers.country.unique()[:10]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "15d5953b-3ad2-4dce-8c65-d7d36a4baa89",
    "metadata": {},
    "source": [
-    "## 8. Summary and next steps\n",
+    "## 9. Summary and next steps\n",
     "\n",
     "Tasks in this notebook: \n",
     "\n",
-    "- Loaded 7 raw source tables from `data/raw/kaggle_clickstream_data/`\n",
-    "- Inspected shapres, schemas, and missing values for key tables\n",
+    "- Loaded from `data/raw/kaggle_clickstream_data/`\n",
+    "- Inspected shapes, schemas, and missing values for key tables\n",
     "- Converted all timestamp fields to proper `datetime` types\n",
     "- Added basic time fearures (`hour`, `day_of_week`,) to the `events` table\n",
     "- Verified that missing values in `events` follow the expected event-type pattern\n",
     "- Confirmed referrential integrity across `events`, `sessions`, `orders`, `customers`, `order_items`, and `products`\n",
     "- Checked that the core numeric fields (prices, totals, quantities, discounts, age)\n",
     "- Validated uniqueness of core key columns (`event_id`, `session_id`, `order_id`, `customer_id`)\n",
+    "- Normalized key categorical fields (`event_type`, `payment_method`, `device`, `source`, `country`)\n",
     "\n",
-    "The raw clickstream dataset is now type-correct and passes basic data-quality checks. \n",
+    "The raw clickstream dataset is now type-correct, consisten and passes basic data-quality checks. \n",
     "\n",
-    "***Next notebook***: aggregate events and sessions into analysis-ready tables (session-level metrics, customer-level purchase behaviour) and write cleaned outputs to `data/processed/'. "
+    "***Next step***: \n",
+    "`02_feature_engineering.ipynb`: transform the cleaned tables into analysis-ready datasets (session-level metrics, funnels, customer behaviour summaries) and save final outputs to `data/processed/`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "07be5e79-2578-436e-a65d-f674a910ca27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved cleaned tables to: ../data/processed/\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9. Save cleaned tables to data/processed \n",
+    "\n",
+    "processed_path = \"../data/processed/\"\n",
+    "os.makedirs(processed_path, exist_ok=True)\n",
+    "\n",
+    "# Save fully-checked, lightly cleaned versions. \n",
+    "\n",
+    "events_clean = events.copy()\n",
+    "orders_clean = orders.copy()\n",
+    "customers_clean = customers.copy()\n",
+    "sessions_clean = sessions.copy()\n",
+    "order_items_clean = order_items.copy()\n",
+    "products_clean = products.copy()\n",
+    "reviews_clean = reviews.copy()\n",
+    "\n",
+    "# Write to CSV (without the pandas index)\n",
+    "events_clean.to_csv(processed_path + \"events_clean.csv\", index=False)\n",
+    "orders_clean.to_csv(processed_path + \"orders_clean.csv\", index=False)\n",
+    "customers_clean.to_csv(processed_path + \"customers_clean.csv\", index=False)\n",
+    "sessions_clean.to_csv(processed_path + \"sessions_clean.csv\", index=False)\n",
+    "order_items_clean.to_csv(processed_path + \"order_items_clean.csv\", index=False)\n",
+    "products_clean.to_csv(processed_path + \"products_clean.csv\", index=False)\n",
+    "reviews_clean.to_csv(processed_path + \"reviews_clean.csv\", index=False)\n",
+    "\n",
+    "print(\"Saved cleaned tables to:\", processed_path)"
    ]
   }
  ],
