Fix checkout count print typ0

--- a/notebooks/03_behaviour_funnels.ipynb
+++ b/notebooks/03_behaviour_funnels.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "a11905ff",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
       "Total sessions: 120000\n",
       "Reached page view:   120000\n",
       "Reached add to card: 81518\n",
-      "Reached checkout:    33580\n",
+      "Reached checkout:    44909\n",
       "\\Conversions vs ALL sessions:\n",
       "  Any page view: 100.00%\n",
       "  Any add to cart:  67.93%\n",
@@ -476,7 +476,7 @@
     "print(\"Total sessions:\", total_sessions)\n",
     "print(\"Reached page view:  \", n_view)\n",
     "print(\"Reached add to card:\", n_cart)\n",
-    "print(\"Reached checkout:   \", n_purchase)\n",
+    "print(\"Reached checkout:   \", n_checkout)\n",
     "\n",
     "# Conversion vs ALL sessions \n",
     "\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "54ed440f",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
        "2   tablet        8511      100.0       67.3           37.0           27.7"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "b526ff01",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
        "5       ES        5580      100.0       68.5           37.4           27.9"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "e30045d1",
    "metadata": {},
    "outputs": [
