--- a/notebooks/05_association_rules.ipynb
+++ b/notebooks/05_association_rules.ipynb
@@ -8,22 +8,38 @@
     "# Customer Behaviour Insight Engine - Product Associations (Notebook 5)\n",
     "\n",
     "\n",
-    "This notebook explores which products are frequently bought together.\n",
+    "This notebook explores **which products are frequently bought and viewed together**.\n",
     "\n",
-    "We use two approaches:\n",
+    "There are two main approaches:\n",
     "\n",
-    "1. A simple, transparent Pandas-based analysis of product pairs per order  \n",
-    "2. A formal association rule mining approach (Apriori) using `mlxtend`\n",
+    "1. **Order-based associations**\n",
+    "    - Look at which products appear together in the **same order**\n",
+    "    - Compute classic rule metrics: **support, confidence, lift**\n",
+    "    - Run the **Apriori** algorithm (via `mlxtend`) on a one-hot order-product matrix\n",
     "\n",
-    "These methods are commonly used for:\n",
-    "- “Frequently bought together” recommendations  \n",
-    "- Product bundling and cross-sell opportunities  \n",
-    "- Understanding how customers combine products in a single order"
+    "2. **Session-based associations (co-views)**\n",
+    "    - Look at which products are **viewed in the same sessions**, even if not bought\n",
+    "    - Build a **product-product co-view matrix** and a **heatmap**\n",
+    "    - Extract a table of the **top co-viewed product pairs**\n",
+    "\n",
+    "These analyses are typically used for: \n",
+    "\n",
+    "    - \"Frequently bought together\" suggestions\n",
+    "    - Cross-sell / bundle ideas\n",
+    "    - Understanding how customers **navigate** a product catalogue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b571b9ad",
+   "metadata": {},
+   "source": [
+    "## 1. Load cleaned order & prouct data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1a5a71a7",
    "metadata": {},
    "outputs": [
@@ -155,12 +171,13 @@
        "4     paid  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -186,14 +203,26 @@
    "id": "d0ef51eb",
    "metadata": {},
    "source": [
-    "## 1. Build product baskets per order \n",
+    "## 2. Build product baskets per order \n",
     "\n",
-    "Group order items by `order_id` so each row represents one order and contains a list of product_ids bought together. "
+    "Goal: **one row per oder with a list of products in that order.**\n",
+    "\n",
+    "Steps: \n",
+    "    - Drop any `order_items` rows without a valid `product_id`\n",
+    "    - Cast `product_id` to `int`\n",
+    "    - Group by `order_id` and aggregate `product_id` inot a Python `list`\n",
+    "\n",
+    "Result: a `baskets` DataFrame with: \n",
+    "\n",
+    "    - `order_id`\n",
+    "    - `products` -> e.g. `[405, 487, 442, 348]`\n",
+    "\n",
+    "This is a typical **\"basket\"** representation for market basket analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a2053d7c",
    "metadata": {},
    "outputs": [
@@ -320,9 +349,20 @@
    "id": "e237d086",
    "metadata": {},
    "source": [
-    "## 2. Single-product frequencies (support)\n",
+    "## 3. Single-product frequencies (support)\n",
     "\n",
-    "Compute how many orders contain each product and the support (share of orders)."
+    "Measure **how common each product is across orders**. \n",
+    "\n",
+    "    - `n_orders` = total number of orders in the `baskets` table\n",
+    "    - `explode` the `products` list so we get one row per order `(order_id, product_id)`\n",
+    "    - For each `product_id`, count how many **distinct orders** it appears in -> `order_count`\n",
+    "    - **Support** is defined as: \n",
+    "\n",
+    "   \\[\n",
+    "\\text{support(product)} = \\frac{\\text{# of orders containing product}}{\\text{total # of orders}}\n",
+    "\\]\n",
+    "\n",
+    "This gives a baseline for how frequently each product is purchased."
    ]
   },
   {
@@ -439,9 +479,17 @@
    "id": "e49226e3",
    "metadata": {},
    "source": [
-    "## 3. Product pair co-concurrence with Pandas \n",
+    "## 4. Product pair co-concurrence with Pandas \n",
     "\n",
-    "For each order, generate all unique ordered product pairs and count how many orders each pair appers in. "
+    "Examine the **pairs of products that appear together in the same order**. \n",
+    "\n",
+    "For each order: \n",
+    "\n",
+    "    - Take the set of unique products (so duplicates in the same order don't inflate counts)\n",
+    "    - Use `itertools.combinations(..., 2)` to generate all possible product pairs `(A, B)` in that order \n",
+    "    - Count how many orders each pair appear in -> `pair_count`\n",
+    "\n",
+    "Simple, fully transparent co-occurnce calculation using only Pandas + Python"
    ]
   },
   {
@@ -551,9 +599,34 @@
    "id": "2f83df4f",
    "metadata": {},
    "source": [
-    "## 4. Rule metrics: support, confidence lift (Pandas)\n",
+    "## 5. Rule metrics: support, confidence lift (Pandas)\n",
     "\n",
-    "Using the pair counts and single-product supports, compute classic association rule metrics for A -> B"
+    "Merge the pair counts with single-product supports to compute association rule metrics for the rulle **A -> B**:\n",
+    "\n",
+    "- **Support of the pair**:  \n",
+    "  \\[\n",
+    "  \\text{support}_{A,B} = \\frac{\\text{# orders containing both A and B}}{\\text{total # orders}}\n",
+    "  \\]\n",
+    "\n",
+    "- **Confidence (A → B)**:  \n",
+    "  “If someone buys A, how often do they also buy B?”  \n",
+    "  \\[\n",
+    "  \\text{confidence}_{A → B} = \\frac{\\text{support}_{A,B}}{\\text{support}_A}\n",
+    "  \\]\n",
+    "\n",
+    "- **Lift (A → B)**:  \n",
+    "  “How much more likely is B when A is present, compared to chance?”  \n",
+    "  \\[\n",
+    "  \\text{lift}_{A → B} = \\frac{\\text{support}_{A,B}}{\\text{support}_A \\cdot \\text{support}_B}\n",
+    "  \\]\n",
+    "\n",
+    "Then filter rules with:\n",
+    "\n",
+    "- relatively high pair support (`support_ab >= 0.01`),  \n",
+    "- reasonably strong confidence, and  \n",
+    "- `lift >= 1` (i.e. positively associated, not just random).\n",
+    "\n",
+    "In this dataset, these thresholds are strict, so only very strong patterns would pass."
    ]
   },
   {
@@ -828,10 +901,41 @@
    "id": "4a8c6249",
    "metadata": {},
    "source": [
-    "## 5. Apriori-based association rules (mlextend)\n",
+    "## 6. Apriori-based association rules (mlextend)\n",
     "\n",
-    "Build a one-hot encoded order-product matrix and run the Apriori algorithm to find frequent itemsets and association rules with support, conficence and lift. "
+    "Use the `mlxtend` implementaion of **Apriori** on a one-hot encoded order-product matrix: \n",
+    "\n",
+    "1. Build `basket_matrix`:\n",
+    "    - Index: `order_id`\n",
+    "    - Columns: `product_id`\n",
+    "    - Values: `True/False` indicating whether a product appears in that order \n",
+    "\n",
+    "2. Run `apriori` with:\n",
+    "    - `min_support = 0.002`\n",
+    "    -` max_len = 2` (only include single products and pairs)\n",
+    "    - `use_colnames = True` to get product IDs in the itemsets\n",
+    "\n",
+    "3. Sort frequent itemsets by support. \n",
+    "\n",
+    "### Important observation\n",
+    "\n",
+    "Apriori mostly returns **single-item** sets, not frequent pairs. \n",
+    "This is consisten with the structure of the data: \n",
+    "\n",
+    "- Most orders contain **only one product (median basket size = 1)**\n",
+    "- Product pairs rarely repeat across many orders\n",
+    "- As a result very few combinations reach the `min_support` threshold \n",
+    "\n",
+    "This is a realisitic outcome in many e-commerce settings where the \"basket\" is often a single item."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d266a16c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1420,24 +1524,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3191ad09",
-   "metadata": {},
-   "source": [
-    "## Why Apriori Returned only Single-Item Itemsets \n",
-    "\n",
-    "In this dataset, most orders contain one product (median =1; only a small fraction have more than one item).\n",
-    "Apriori detects product pairs or sets if:\n",
-    "\n",
-    "1. They appear together in the same order \n",
-    "2. They repeat accross many orders \n",
-    "\n",
-    "Because basket sizes are small and combinations rarely repeat, Apriori correctly identifies no sufficiently frequent pairs. \n",
-    "This is a realistic outcome in e-commerce data. \n",
-    "To uncover meaningful product relationships, a pivot to session-based affinity analyiss will be made. This captures how products co-occur in browing behaviour, not only in final purchaes. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "d19d387d",
@@ -1976,16 +2062,6 @@
     "pair_df[\"affinity\"] = pair_df[\"co_views\"] / pair_df[[\"support_A\", \"support_B\"]].min(axis=1)\n",
     "\n",
     "pair_df.sort_values(\"affinity\", ascending=False).head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3efc5aaf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "I "
    ]
   },
   {
@@ -2783,12 +2859,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f906d41c",
+   "metadata": {},
+   "source": [
+    "## 7. Switching to a session-based analysis \n",
+    "\n",
+    "Because the order-based Apriori doesn't reavel much about product combinations (orders are too small), a pivot is made to **session-level behaviour**:\n",
+    "\n",
+    "- In place of \"What gets purchased together?\" \n",
+    "- **\"What gets viewed together in the same browsing session?\"**\n",
+    "\n",
+    "To reveal **stronger affinites** between products, even if customers only purchase a single item. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2966a4db",
    "metadata": {},
    "source": [
-    "# 6. Session-based co-view explortation\n",
+    "## 8. Load events and build a session_based product co-view matrix \n",
     "\n",
-    "How many views per session"
+    "Load `events_clean.csv`, which contains **event-level data**: \n",
+    "\n",
+    " - `session_id`, `timestamp`, `event_type`, `product_id`, etc. \n",
+    "\n",
+    " Focus is: \n",
+    "\n",
+    " - `event_type == \"page_view\"` -> these are product views\n",
+    " - Group by `session_id` and collect the list of `product_id`s viewd in each session\n",
+    "\n",
+    " Provides a `session_product_views` table: \n",
+    "\n",
+    " - `session_id`\n",
+    " - `products_viewed` = list of product IDs viewed in that session (unique per session later on)\n",
+    "\n",
+    "\n",
+    " Then: \n",
+    "\n",
+    " 1. Count how many sessions each product pair `(A, B)` appears in together -> `co_views`\n",
+    " 2. Compute how often each product is viewed overall \n",
+    " 3. Define a simple **affinty score**:\n",
+    "\n",
+    " \\[\n",
+    "\\text{affinity}(A, B) =\n",
+    "\\frac{\\text{# sessions that view A and B together}}\n",
+    "{\\min(\\text{# sessions that view A}, \\text{# sessions that view B})}\n",
+    "\\]\n",
+    "\n",
+    "To normalise co-views by how often the **less-viewed** product appears."
    ]
   },
   {
