--- a/notebooks/05_association_rules.ipynb
+++ b/notebooks/05_association_rules.ipynb
@@ -34,7 +34,15 @@
    "id": "b571b9ad",
    "metadata": {},
    "source": [
-    "## 1. Load cleaned order & prouct data"
+    "## 1. Load cleaned order & prouct data\n",
+    "\n",
+    "Load the cleaned tables for order-level analysis: \n",
+    "\n",
+    "- `orders_clean.csv` - one row per order \n",
+    "- `order_items_clean.csv` - one row per order line (order-product)\n",
+    "- `products_clean.csv` product catalog\n",
+    "\n",
+    "Build baskets and association rules from `order_items` and later connect to product info if necessary. \n"
    ]
   },
   {
@@ -479,13 +487,13 @@
    "id": "e49226e3",
    "metadata": {},
    "source": [
-    "## 4. Product pair co-concurrence with Pandas \n",
+    "## 4. Order-based product pairs with Pandas\n",
     "\n",
     "Examine the **pairs of products that appear together in the same order**. \n",
     "\n",
     "For each order: \n",
     "\n",
-    "    - Take the set of unique products (so duplicates in the same order don't inflate counts)\n",
+    "    - Take the **set of unique products** (so duplicates in the same order don't inflate counts)\n",
     "    - Use `itertools.combinations(..., 2)` to generate all possible product pairs `(A, B)` in that order \n",
     "    - Count how many orders each pair appear in -> `pair_count`\n",
     "\n",
@@ -601,32 +609,24 @@
    "source": [
     "## 5. Rule metrics: support, confidence lift (Pandas)\n",
     "\n",
-    "Merge the pair counts with single-product supports to compute association rule metrics for the rulle **A -> B**:\n",
+    "Using the pair counts and single-product supports, we compute association rule metrics for the rule **A → B**:\n",
     "\n",
-    "- **Support of the pair**:  \n",
-    "  \\[\n",
-    "  \\text{support}_{A,B} = \\frac{\\text{# orders containing both A and B}}{\\text{total # orders}}\n",
-    "  \\]\n",
+    "- **Pair support**  \n",
+    "  support(A,B) = (# orders containing both A and B) / (total # orders)\n",
     "\n",
-    "- **Confidence (A → B)**:  \n",
-    "  “If someone buys A, how often do they also buy B?”  \n",
-    "  \\[\n",
-    "  \\text{confidence}_{A → B} = \\frac{\\text{support}_{A,B}}{\\text{support}_A}\n",
-    "  \\]\n",
+    "- **Confidence (A → B)** – “If someone buys A, how often do they also buy B?”  \n",
+    "  confidence(A → B) = support(A,B) / support(A)\n",
     "\n",
-    "- **Lift (A → B)**:  \n",
-    "  “How much more likely is B when A is present, compared to chance?”  \n",
-    "  \\[\n",
-    "  \\text{lift}_{A → B} = \\frac{\\text{support}_{A,B}}{\\text{support}_A \\cdot \\text{support}_B}\n",
-    "  \\]\n",
+    "- **Lift (A → B)** – “How much more likely is B when A is present, compared to chance?”  \n",
+    "  lift(A → B) = support(A,B) / (support(A) * support(B))\n",
     "\n",
-    "Then filter rules with:\n",
+    "We then filter to rules with relatively strong signals, e.g.:\n",
     "\n",
-    "- relatively high pair support (`support_ab >= 0.01`),  \n",
-    "- reasonably strong confidence, and  \n",
-    "- `lift >= 1` (i.e. positively associated, not just random).\n",
+    "- `support_ab >= 0.01`\n",
+    "- `confidence_A_to_B >= 0.3`\n",
+    "- `lift_A_to_B >= 1.0` (positive association)\n",
     "\n",
-    "In this dataset, these thresholds are strict, so only very strong patterns would pass."
+    "In this dataset, these thresholds are intentionally strict, so only very strong patterns (if any) would pass."
    ]
   },
   {
@@ -906,7 +906,7 @@
     "Use the `mlxtend` implementaion of **Apriori** on a one-hot encoded order-product matrix: \n",
     "\n",
     "1. Build `basket_matrix`:\n",
-    "    - Index: `order_id`\n",
+    "    - Rows: `order_id`\n",
     "    - Columns: `product_id`\n",
     "    - Values: `True/False` indicating whether a product appears in that order \n",
     "\n",
@@ -928,14 +928,6 @@
     "\n",
     "This is a realisitic outcome in many e-commerce settings where the \"basket\" is often a single item."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d266a16c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2069,12 +2061,35 @@
    "id": "43ee73d9",
    "metadata": {},
    "source": [
-    "## Co-occurence Heatmap "
+    "## Co-occurence Heatmap (order-based)\n",
+    "\n",
+    "To visually confrim the sparsity of the order-level associations: \n",
+    "\n",
+    "1. Select the **top N most purchased products** by support. \n",
+    "2. Build a subset of the order-product matrix (`subset`) with only these products. \n",
+    "3. Computer a co-purchase matrix: \n",
+    "\n",
+    "    - Rows and columns: product IDs\n",
+    "    - Cell (i, j): # of orders that contain **both** product i and product j. \n",
+    "\n",
+    "4. Plot a heatmap of co-purchase counts. \n",
+    "\n",
+    "Interpreation:\n",
+    "\n",
+    "- Even among the **top 20** most-purchased products, co-purchases are very rare. \n",
+    "- Most cells are 0 or very small counts. \n",
+    "- There are **no clear high-strength product clusters** at the order level. \n",
+    "\n",
+    "This visually supports the Aprioro result: \n",
+    "**orders are usually single-product**, so pure basket-based recommendations are weak in this dataset. \n",
+    "\n",
+    "This motivates a pivot to **session-based behaviour**, where customers view multiple products even if they only buy one. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 81,
    "id": "7cf6dc09",
    "metadata": {},
    "outputs": [
@@ -2155,7 +2170,7 @@
        "4       392          113  0.003365"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2859,59 +2874,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f906d41c",
+   "id": "cc88da67",
    "metadata": {},
-   "source": [
-    "## 7. Switching to a session-based analysis \n",
-    "\n",
-    "Because the order-based Apriori doesn't reavel much about product combinations (orders are too small), a pivot is made to **session-level behaviour**:\n",
-    "\n",
-    "- In place of \"What gets purchased together?\" \n",
-    "- **\"What gets viewed together in the same browsing session?\"**\n",
-    "\n",
-    "To reveal **stronger affinites** between products, even if customers only purchase a single item. "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "2966a4db",
    "metadata": {},
    "source": [
-    "## 8. Load events and build a session_based product co-view matrix \n",
+    "## 7. Switching to session-based analysis +  Load events and build a session_based product co-view matrix \n",
     "\n",
-    "Load `events_clean.csv`, which contains **event-level data**: \n",
+    "Because order-based Apriori doesn’t reveal strong product combinations (orders are too small), switch from:\n",
     "\n",
-    " - `session_id`, `timestamp`, `event_type`, `product_id`, etc. \n",
+    "- “**What gets purchased together?**”\n",
+    "to\n",
+    "- “**What gets viewed together in the same browsing session?**”\n",
     "\n",
-    " Focus is: \n",
+    "Session-level co-views can reveal **stronger affinities** between products, even if customers only purchase a single item.\n",
     "\n",
-    " - `event_type == \"page_view\"` -> these are product views\n",
-    " - Group by `session_id` and collect the list of `product_id`s viewd in each session\n",
+    "In the next steps:\n",
     "\n",
-    " Provides a `session_product_views` table: \n",
-    "\n",
-    " - `session_id`\n",
-    " - `products_viewed` = list of product IDs viewed in that session (unique per session later on)\n",
-    "\n",
-    "\n",
-    " Then: \n",
-    "\n",
-    " 1. Count how many sessions each product pair `(A, B)` appears in together -> `co_views`\n",
-    " 2. Compute how often each product is viewed overall \n",
-    " 3. Define a simple **affinty score**:\n",
-    "\n",
-    " \\[\n",
-    "\\text{affinity}(A, B) =\n",
-    "\\frac{\\text{# sessions that view A and B together}}\n",
-    "{\\min(\\text{# sessions that view A}, \\text{# sessions that view B})}\n",
-    "\\]\n",
-    "\n",
-    "To normalise co-views by how often the **less-viewed** product appears."
+    "- Use `events_clean.csv` (event-level logs) to build a **session × product** view.\n",
+    "- Analyse which products tend to be **viewed together** in the same session.\n",
+    "- Visualise this with a co-view heatmap and a table of top pairs.\n",
+    "To normalise co-views by how often the **less-viewed** product appears.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "b459b320",
    "metadata": {},
    "outputs": [
@@ -2935,9 +2927,7 @@
     }
    ],
    "source": [
-    "# 6. Session-based co-view exploration (do sessions even have many views?)\n",
     "\n",
-    "# We already have `events` loaded above\n",
     "views = events[events[\"event_type\"] == \"page_view\"].copy()\n",
     "\n",
     "# How many *distinct* products are viewed per session?\n",
@@ -2948,6 +2938,19 @@
     ")\n",
     "\n",
     "session_view_counts[\"n_products_viewed\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08cff9e9",
+   "metadata": {},
+   "source": [
+    "Distribution shows: \n",
+    "\n",
+    "- Median 4 products viewed per session\n",
+    "- Many sessions contain **4-6 distinct products**\n",
+    "\n",
+    "Session-level data is **much richer** than order-level baskets for analysing product relationships. "
    ]
   },
   {
@@ -2983,8 +2986,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a77ec76",
+   "metadata": {},
+   "source": [
+    "## 8. Build co-view matrix for top viewed products\n",
+    "\n",
+    "1. Take the **top N most viewed products** overall.\n",
+    "2. Build a **session × product** one-hot matrix for these products:\n",
+    "   - Rows: `session_id`\n",
+    "   - Columns: product IDs\n",
+    "   - Values: 0/1 → whether the product was viewed in that session.\n",
+    "\n",
+    "3. Compute a co-view matrix:\n",
+    "\n",
+    "   - Rows and columns: product IDs\n",
+    "   - Cell (i, j): # of **sessions** where both i and j were viewed at least once."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "ee59b9db",
    "metadata": {},
    "outputs": [
@@ -3255,7 +3277,6 @@
     "\n",
     "print(\"session_onehot shape:\", session_onehot.shape)\n",
     "\n",
-    "# 🔴 NEW: convert boolean one-hot to 0/1 ints\n",
     "session_onehot_int = session_onehot.astype(int)\n",
     "\n",
     "# 6.3 Co-view counts matrix: how many sessions viewed both i and j?\n",
@@ -3310,8 +3331,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b328d54a",
+   "metadata": {},
+   "source": [
+    "# 8.1 Top co-viewed product pairs (table)\n",
+    "\n",
+    "To make the co-view patterns easier to use: \n",
+    "\n",
+    "- Convert the co-view matrix into a long-form table:\n",
+    "    - `product_A`\n",
+    "    - `product_B`\n",
+    "    - `co_view_count` = # sessions that viewed both\n",
+    "\n",
+    "- Sort by `co_view_count` to find the most freuqently co-viewed paris among the top products \n",
+    "\n",
+    "These pairs are strong canditates for: \n",
+    "\n",
+    "- \"Cusstomers also viewed...\" recoomendations \n",
+    "- Collection pages or carousels combining related products \n",
+    "- Follow-up content suggestions in the browsing journey \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "d04ed76b",
    "metadata": {},
    "outputs": [
@@ -3496,9 +3540,7 @@
     }
    ],
    "source": [
-    "# ---- Create a table of top co-viewed product pairs ----\n",
     "\n",
-    "# Convert co_view_counts to a long-form table\n",
     "pairs = []\n",
     "\n",
     "for i, prod_i in enumerate(top_viewed_products):\n",
@@ -3519,6 +3561,34 @@
     ")\n",
     "\n",
     "co_view_table.head(20)  # show top 20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9edeecf1",
+   "metadata": {},
+   "source": [
+    "## 9 Summary \n",
+    "\n",
+    "- **Order-based analysis (purchaess)**\n",
+    "    - Built product baskets per order and computed product supports.\n",
+    "    - Derived pair-evel support, confidence, and lift using Pandas. \n",
+    "    - Ran Apriori (mlextend) on an order-product one-hot matrix.\n",
+    "    - Result: orders are usually **single-product**, so there are **no strong \"frequntly bought together\" pairs**; the co-purchase heatmap confirms this sparsity. \n",
+    "\n",
+    "-**Session-based analysis (co-views)**\n",
+    "    - Switched to event-level data (`events_clean`) and focused on product page views.\n",
+    "    - Found that sessions typically contain **4-6 distinct product views**, giving rich co-view signals. \n",
+    "    - Built a session x product one-hot matrix, and visualised it as a heatmap. \n",
+    "    - Extracted a ranked table of top co-viewed product pairs. \n",
+    "\n",
+    "**Takeaway:**\n",
+    "For this dataset, **order-based association rules are weak** because customers usually buy only one product per order. \n",
+    "However, **session-based co-views** reveal meaningful product relationships that can be used for: \n",
+    "\n",
+    "    - \"Customers also viewed\" modules\n",
+    "    - Smarter product recommendataions \n",
+    "    - Designing navigation and content to reflect how users actually browse the catalogue. "
    ]
   }
  ],
